Fixing spacing of teaser

--- a/pyconca/static/pycon.css
+++ b/pyconca/static/pycon.css
@@ -341,7 +341,7 @@ footer .contact-list span {
   font-size: 24px;
   line-height: 30px;
   font-family: 'Droid Serif', Georgia, Cambria, "Times New Roman", Times, serif;
-  margin: 36px 0px 0px;
+  margin: 26px 0px 0px;
   text-align: center;
   border: solid;
   border-color: #857874;
